--- a/guide_naturel/front/index.css
+++ b/guide_naturel/front/index.css
@@ -1,7 +1,5 @@
 body {
-  background:
-    url(ressources/foret2.png) center / cover no-repeat,
-    linear-gradient(to bottom, white, #8ebd93);
+  background: url(ressources/foret2.png) center / cover no-repeat, linear-gradient(to bottom, white, #8ebd93);
   background-attachment: fixed;
   min-height: 100vh;
   margin: 0;
@@ -39,7 +37,7 @@ body {
 
 .BFCcarte {
   display: block;
-  width: 100%; /* Ajuste selon tes besoins */
+  width: 100%;
 }
 
 .overlay-image {
@@ -48,13 +46,9 @@ body {
   left: 0;
   width: 100%;
   height: 100%;
-  opacity: 1; /* Cachée par défaut */
   pointer-events: none;
-  transition: opacity 0.3s ease-in-out;
-  z-index: 10; /* Assure que l'image apparaisse bien au-dessus */
-}
-
-/* Affichage de l'image Côte-d'Or au survol
-.image-container:hover .overlay-image {
   opacity: 0;
-}*/
+  transition: opacity 0.3s ease-in-out;
+  z-index: 10;
+
+}
