--- a/guide_naturel/front/index.css
+++ b/guide_naturel/front/index.css
@@ -1,3 +1,14 @@
+:root {
+  --arrow-bg: rgba(255, 255, 255, 0.3);
+  --arrow-icon: url(https://upload.wikimedia.org/wikipedia/commons/9/9d/Caret_down_font_awesome_whitevariation.svg);
+  --option-bg: white;
+  --select-bg: rgba(255, 255, 255, 0.2);
+}
+* {
+  box-sizing: border-box;
+}
+
+
 body {
     background:
         url(ressources/background.jpg) center / cover no-repeat;
@@ -29,8 +40,6 @@ body.stats {
     background-repeat: no-repeat, no-repeat;
     background-size: auto, cover;
 }
-
-
 
 
 #info-box {
@@ -104,5 +113,38 @@ body.stats {
 }
 
 
+.selectregion{
+    color: white;
+    font: 1.2em "Georgia", serif;
+    text-shadow: 0.5px 1px #000000;
+}
 
-
+.regionbox {
+ /* Reset */
+  appearance: none;
+  border: 0;
+  outline: 0;
+  font: inherit;
+  /* Personalize */
+  width: 20rem;
+  padding: 1rem 4rem 1rem 1rem;
+  background: var(--arrow-icon) no-repeat right 0.8em center / 1.4em,
+    linear-gradient(to left, var(--arrow-bg) 3em, var(--select-bg) 3em);
+  color: white;
+  border-radius: 0.25em;
+  box-shadow: 0 0 0.5em 0 rgba(0, 0, 0, 0.2);
+  cursor: pointer;
+  /* Remove IE arrow */
+  &::-ms-expand {
+    display: none;
+  }
+  /* Remove focus outline */
+  &:focus {
+    outline: none;
+  }
+  /* <option> colors */
+  option {
+    color: inherit;
+    background-color: var(--option-bg);
+  }
+}
