--- a/guide_naturel/front/index.css
+++ b/guide_naturel/front/index.css
@@ -142,7 +142,6 @@ body, html {
   gap: 2rem;
 }
 
-/* La carte prend jusqu'à 70% de l'espace */
 .Carte {
   flex: 0 1 45%;
 }
@@ -155,24 +154,63 @@ body, html {
 
 /* Espace réservé pour contenu à droite */
 .contenu-droite {
-    flex: 1 1 35%;
-    max-width: 35%;
-    min-height: 300px;
-    background-color: rgba(255,255,255,0.1); /* Juste pour visualiser */
+  flex: 1;
+  display: flex;
+  justify-content: flex-start; /* aligne le camembert à gauche */
+  align-items: center;
+  padding: 1px;
+  width: 100%;
+  height: 360px;
+  position: relative; /* pour permettre à buttons_right d’être en absolute */
 }
+
+.buttons_right {
+  position: fixed;
+  top: 50%;
+  right: 0;
+  transform: translateY(-50%);
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
+  margin-right: 0;
+  z-index: 1000; /* pour rester au-dessus des autres éléments */
+}
+
+
+.button_right1{
+  padding: 5px;
+  font-size: 1rem;
+  cursor: pointer;
+  background-color: rgba(11, 189, 115, 0.6);
+  color: white;
+  border: 2px solid rgba(11, 189, 115, 0.5);
+  border-top-right-radius: 0;
+  border-bottom-right-radius: 0;
+  border-top-left-radius: 15px;
+  border-bottom-left-radius: 15px;
+      font: 15px "Georgia", serif;
+  transition: background-color 0.3s ease-in-out, border-color 0.3s ease-in-out;
+}
+
+.button_right1:hover {
+  border: 2px solid #19b09e;
+  background: #19b09e;
+}
+
 
 @media screen and (max-width: 768px) {
-  .content-below {
-    flex-direction: column;
-    align-items: center;
-  }
+    .content-below {
+        flex-direction: column;
+        align-items: center;
+    }
 
-  .Carte,
-  .espace-droit {
-    width: 100%;
-    max-width: 100%;
-  }
+    .Carte,
+    .espace-droit {
+        width: 100%;
+        max-width: 100%;
+    }
 }
+
 
 
 
