--- a/guide_naturel/front/index2.css
+++ b/guide_naturel/front/index2.css
@@ -356,7 +356,7 @@ body, html {
     display: block;
     margin: 1px auto 1px auto; /* Un peu plus de marge en haut, moins en bas */
     padding: 3px 5px;
-    font-family: "Georgia", serif; /* Pour correspondre au reste */
+    font-family: "Fira Code", sans-serif; /* Pour correspondre au reste */
     font-size: 0.8rem;
     color: white;
     background-color: #e86f3f; /* Rouge pour "fermer" ou "annuler" */
@@ -365,7 +365,6 @@ body, html {
     cursor: pointer;
     text-align: center;
     text-decoration: none;
-    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.2);
     transition: background-color 0.2s ease-in-out, transform 0.1s ease;
 }
 
@@ -373,5 +372,4 @@ body, html {
 #close-mini-chart:focus {
     background-color: #c94b3c; /* Rouge plus foncé au survol */
     border-color: #c94b3c;
-    box-shadow: 0px 3px 5px rgba(0, 0, 0, 0.3);
 }
