ca marche avec flask

--- a/guide_naturel/templates/apropos.html
+++ b/guide_naturel/templates/apropos.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- Ajouté pour la responsivité -->
   <title>Le Guide Naturel de la BFC</title>
-  <link href="global.css" rel="stylesheet">
-    <link href="apropos.css" rel="stylesheet">
+  <link href="../static/css/global.css" rel="stylesheet">
+    <link href="../static/css/apropos.css" rel="stylesheet">
 </head>
 
 <body class="apropos">
@@ -25,19 +25,19 @@
             <div class="team-members">
                 <!-- Membre 1 -->
                 <div class="team-member">
-                    <img src="ressources/team/mathis.jpg" alt="Photo de Mathis" class="team-photo">
+                    <img src="../static/ressources/team/mathis.jpg" alt="Photo de Mathis" class="team-photo">
                     <h3>Mathis</h3>
                     <p class="member-role">Gestionnaire de la base de données et Back-End</p>
                 </div>
                 <!-- Membre 2 -->
                 <div class="team-member">
-                    <img src="ressources/team/maeva.jpg" alt="Photo de Maeva" class="team-photo">
+                    <img src="../static/ressources/team/maeva.jpg" alt="Photo de Maeva" class="team-photo">
                     <h3>Maeva</h3>
                     <p class="member-role">Gestionnaire du Front-End et Back-End</p>
                 </div>
                 <!-- Membre 3 -->
                 <div class="team-member">
-                    <img src="ressources/team/jordan.jpg" alt="Photo de Jordan" class="team-photo">
+                    <img src="../static/ressources/team/jordan.jpg" alt="Photo de Jordan" class="team-photo">
                     <h3>Jordan</h3>
                     <p class="member-role">Gestionnaire des recherches</p>
                 </div>
@@ -68,6 +68,6 @@
 
     <div id="footer-placeholder"></div>
 
-    <script src="app.js"></script>
+    <script src="../static/js/app.js"></script>
 </body>
 </html>
