--- a/guide_naturel/templates/index.html
+++ b/guide_naturel/templates/index.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- Ajouté pour la responsivité -->
   <title>Le Guide Naturel de la BFC</title>
-  <link href="global.css" rel="stylesheet">
-    <link href="index.css" rel="stylesheet">
+  <link href="../static/css/global.css" rel="stylesheet">
+    <link href="../static/css/index.css" rel="stylesheet">
 </head>
 
 <body class="index">
@@ -23,7 +23,7 @@
   <div class="content-below">
     <section class="Carte"> <!-- <section> pour une section thématique -->
       <div class="image-container">
-        <img src="ressources/carte_bfc.png" alt="Carte de la région Bourgogne-Franche-Comté avec ses départements cliquables" usemap="#departements_bfc">
+        <img src="../static/ressources/carte_bfc.png" alt="Carte de la région Bourgogne-Franche-Comté avec ses départements cliquables" usemap="#departements_bfc">
         <!-- Ces images sont prévues pour être mises à jour par JavaScript au survol des départements -->
         <img src="" alt="" class="overlay-image">
         <img src="" alt="" class="overlay-text">
@@ -112,10 +112,10 @@
 
  <div id="footer-placeholder"></div>
 
-<script src="index.js"></script>
+<script src="../static/js/index.js"></script>
 <script src="https://unpkg.com/image-map-resizer@1.0.10/js/imageMapResizer.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-<script src="app.js"></script>
+<script src="../static/js/app.js"></script>
 
 </body>
 </html>
