--- a/guide_naturel/templates/recherche.html
+++ b/guide_naturel/templates/recherche.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- Ajouté pour la responsivité -->
   <title>Le Guide Naturel de la BFC</title>
-  <link href="global.css" rel="stylesheet">
-    <link href="recherche.css" rel="stylesheet">
+  <link href="../static/css/global.css" rel="stylesheet">
+    <link href="../static/css/recherche.css" rel="stylesheet">
 </head>
 
 <body class="recherche">
@@ -30,7 +30,7 @@
 <script src="script_recherche.js"></script>
 <script src="https://unpkg.com/image-map-resizer@1.0.10/js/imageMapResizer.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-<script src="app.js"></script>
+<script src="../static/js/app.js"></script>
 
 </body>
 </html>
