--- a/guide_naturel/static/css/global.css
+++ b/guide_naturel/static/css/global.css
@@ -2,7 +2,7 @@
 body, html {
     margin: 0;
     padding: 0;
-    background: url("ressources/background/background.png") no-repeat fixed center/cover;
+    background: url("../ressources/background/background.png") no-repeat fixed center/cover;
     min-height: 100vh;
     font-family: "Georgia", serif;
     color: #333;
